--- a/Changes.txt
+++ b/Changes.txt
@@ -1,6 +1,7 @@
 Version 1.0.2
 2023-04-08
 
+ * update naar github.com/rug-compling/alud/v2 v2.12.0
  * update codemeta.json
  * webpage https://rug-compling.github.io/paqu/ with rdf data
 
