--- a/Changes.txt
+++ b/Changes.txt
@@ -1,3 +1,10 @@
+Version 1.0.3
+2023-04-10
+
+ * update codemeta.json
+ * webpage with rdf data moved to https://www.let.rug.nl/alfa/rdf/paqu/
+
+
 Version 1.0.2
 2023-04-08
 
